--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
   style
     .students { text-align: center; font-size: 16px;}
     .students a { padding: 10px 0; display: block; font-weight: bold; }
-    .students a:hover { background: #fff; }
+    .students a:hover { background: #eee; }
 
   h4 Students in 2013
   .row-fluid.students
@@ -100,8 +100,6 @@ block content
     
   p
     small
-      | Contact
+      | Contact 
       a(href='mailto:timothy.ryan@students.olin.edu') Tim Ryan 2013
-      | for free hosting or a
-      i name
-      | .olinstudents.com domain.
+      |  for free hosting or a <i>name</i>.olinstudents.com domain.
